style: update styles with Susan  smaller padding and font on tds per Susan  fix borders on safari and firefox with border-collapse: separate and border-spacing: 0

--- a/sass/directives/_tables.scss
+++ b/sass/directives/_tables.scss
@@ -42,8 +42,8 @@
 // Compare Charts
 
 @mixin table--row-column-headers($table-caption-z-index: 2) {
-  border-collapse: collapse;
-  border-spacing: $table-border-spacing 0;
+  border-collapse: separate;
+  border-spacing: $table-border-spacing;
   table-layout: fixed;
   width: 100%;
 
@@ -57,13 +57,12 @@
   th, td {
     position: relative;
     border: $base-border;
-    font-size: 0.9375rem;
   }
 
   th {
-    padding: $base-spacing-medium;
     font-weight: $font-weight-bold;
     text-transform: uppercase;
+    font-size: 0.9375rem;
   }
 
   thead th:first-of-type {
@@ -76,11 +75,13 @@
   }
 
   th[scope='col'] {
+    padding: $base-spacing-medium;
     color: white;
     text-align: center;
   }
 
   th[scope='row'] {
+    padding: $table--row-column-headers--row-top-bottom-padding $base-spacing-medium;
     background-color: $table-row-th--background;
     text-align: left;
     font-size: $small-font-size;
@@ -94,9 +95,10 @@
   }
 
   td {
-    padding: $table--row-column-headers--padding;
+    padding: $table--row-column-headers--row-top-bottom-padding 1.5rem;
     color: $grey-demon;
     text-align: center;
+    font-size: $small-font-size;
   }
 
   .button {
